[gd_scene load_steps=24 format=3 uid="uid://b2x64pn7vrdbk"]

[ext_resource type="Script" uid="uid://b0phe6rlopamo" path="res://main.gd" id="1_5vw27"]
[ext_resource type="PackedScene" uid="uid://iopwhmejcr8b" path="res://addons/RadialMenu/RadialMenu.tscn" id="6_272bh"]
[ext_resource type="Theme" uid="uid://dal5nxlfl7nfc" path="res://addons/RadialMenu/light_default_theme.tres" id="7_5vw27"]
[ext_resource type="Script" uid="uid://bmwfctnkm1saw" path="res://Scripts/HUD.gd" id="12_dg77c"]
[ext_resource type="PackedScene" uid="uid://cfk5ehcpdmuu3" path="res://day_night_cycle.tscn" id="13_ycdy4"]
[ext_resource type="Script" uid="uid://dr835tnqe2dl2" path="res://Scripts/SpeedController.gd" id="14_2cqfq"]
[ext_resource type="Texture2D" uid="uid://dxx8tyyk10csf" path="res://UI/potion.svg" id="14_a6jrf"]
[ext_resource type="PackedScene" uid="uid://b3vtftvwyo7kf" path="res://weather_controller.tscn" id="14_w48qg"]
[ext_resource type="StyleBox" uid="uid://0817xopg1d4p" path="res://button_normal.tres" id="15_xuqvo"]
[ext_resource type="Script" uid="uid://tpt7uyrav1b5" path="res://Scripts/BrewingUI.gd" id="15_yaehf"]
[ext_resource type="PackedScene" uid="uid://d1866hlhv13s8" path="res://CartScene.tscn" id="18_074og"]
[ext_resource type="Script" uid="uid://g7tttnunwbec" path="res://addons/zylann.hterrain/hterrain.gd" id="18_cegan"]
[ext_resource type="Script" uid="uid://b4lgdcn43p51m" path="res://addons/zylann.hterrain/hterrain_texture_set.gd" id="19_82xsv"]
[ext_resource type="Texture2D" uid="uid://b672eidlg0qrc" path="res://textures/grass/Wild_Grass_oiloL0_2K_BaseColor.jpg" id="20_d13ii"]
[ext_resource type="Texture2D" uid="uid://b0hbd03xqw8qn" path="res://textures/grass/Wild_Grass_oiloL0_2K_Normal.jpg" id="22_0odxb"]
[ext_resource type="Resource" uid="uid://5w6p8x257feu" path="res://TerrainData/data.hterrain" id="22_qsp4k"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_w48qg"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_vivmo"]
sky_material = SubResource("ProceduralSkyMaterial_w48qg")

[sub_resource type="Environment" id="Environment_2cqfq"]
background_mode = 2
sky = SubResource("Sky_vivmo")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_efxa6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_074og"]
bg_color = Color(0.976038, 0.857462, 0.819559, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cegan"]
bg_color = Color(0.826292, 0.436063, 0.310318, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Resource" id="Resource_w48qg"]
script = ExtResource("19_82xsv")
mode = 0
textures = [[ExtResource("20_d13ii")], [ExtResource("22_0odxb")]]

[node name="Main" type="Node3D"]
script = ExtResource("1_5vw27")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2cqfq")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.5, -2.18557e-08, 0, -4.37114e-08, 1, -0.5, 0.866025, 3.78552e-08, 0, 38.9556, 0)
shadow_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.55671e-08, 1.5, -6.55671e-08, 0, -6.55671e-08, -1.5, -1.5, -6.55671e-08, 2.86603e-15, -9.79124, 1.90583, -15.9381)
mesh = SubResource("BoxMesh_efxa6")
skeleton = NodePath("")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.55671e-08, 1.5, -6.55671e-08, 0, -6.55671e-08, -1.5, -1.5, -6.55671e-08, 2.86603e-15, 20.773, 1.90583, -34.3608)
mesh = SubResource("BoxMesh_efxa6")
skeleton = NodePath("")

[node name="SoilMenu" parent="." instance=ExtResource("6_272bh")]
custom_minimum_size = Vector2(300, 300)
offset_bottom = 300.0
center_radius = 60
circle_coverage = 1.0
default_theme = ExtResource("7_5vw27")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("12_dg77c")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer"]
custom_minimum_size = Vector2(700, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50
alignment = 1

[node name="FirewoodLabel" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Firewood"

[node name="SeedLabel" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Seeds"

[node name="PlantsLabel" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Plants"

[node name="FatigueBar" type="ProgressBar" parent="CanvasLayer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
rounded = true

[node name="BrewingButton" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/icon = ExtResource("14_a6jrf")
theme_override_styles/normal = ExtResource("15_xuqvo")
text = "Brewing
Potion"

[node name="Control" type="HBoxContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(220, 200)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -260.0
offset_top = -200.0
offset_right = -40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
script = ExtResource("14_2cqfq")

[node name="SpeedSlider" type="VSlider" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2

[node name="TurnSlider" type="HSlider" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="BrewingUI" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -375.0
offset_top = 150.0
offset_right = 375.0
offset_bottom = 650.0
grow_horizontal = 2
script = ExtResource("15_yaehf")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BrewingUI"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="CanvasLayer/BrewingUI/VBoxContainer"]
layout_mode = 2
text = "Magical Brewery"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BrewingUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="GrowthButton" type="Button" parent="CanvasLayer/BrewingUI/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.517184, 0.517184, 0.517184, 1)
theme_override_styles/disabled = SubResource("StyleBoxFlat_074og")
theme_override_styles/hover = SubResource("StyleBoxFlat_cegan")
theme_override_styles/normal = ExtResource("15_xuqvo")
text = "Growth Potion"

[node name="WeatherButton" type="Button" parent="CanvasLayer/BrewingUI/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.517184, 0.517184, 0.517184, 1)
theme_override_styles/disabled = SubResource("StyleBoxFlat_074og")
theme_override_styles/hover = SubResource("StyleBoxFlat_cegan")
theme_override_styles/normal = ExtResource("15_xuqvo")
text = "Weather Potion"

[node name="EnergyButton" type="Button" parent="CanvasLayer/BrewingUI/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.517184, 0.517184, 0.517184, 1)
theme_override_styles/disabled = SubResource("StyleBoxFlat_074og")
theme_override_styles/hover = SubResource("StyleBoxFlat_cegan")
theme_override_styles/normal = ExtResource("15_xuqvo")
text = "Energy Potion"

[node name="ResultLabel" type="Label" parent="CanvasLayer/BrewingUI/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="CanvasLayer/BrewingUI/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Close"

[node name="DayNightCycle" parent="." instance=ExtResource("13_ycdy4")]

[node name="WeatherController" parent="." instance=ExtResource("14_w48qg")]
weather_change_interval = 45.0

[node name="CART" parent="." instance=ExtResource("18_074og")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -91.0909, 6.43622, 0)

[node name="HTerrain" type="Node3D" parent="."]
script = ExtResource("18_cegan")
centered = true
_terrain_data = ExtResource("22_qsp4k")
chunk_size = 32
collision_enabled = true
collision_layer = 1
collision_mask = 2
shader_type = "Classic4Lite"
custom_shader = null
custom_globalmap_shader = null
texture_set = SubResource("Resource_w48qg")
render_layers = 1
cast_shadow = 1
shader_params/u_ground_uv_scale = 20
shader_params/u_depth_blending = true
shader_params/u_triplanar = null
shader_params/u_tile_reduction = null
metadata/_custom_type_script = "uid://g7tttnunwbec"

[connection signal="item_selected" from="SoilMenu" to="." method="_on_ArcPopupMenu_item_selected"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/HBoxContainer/BrewingButton" to="CanvasLayer" method="_on_brewing_button_pressed"]
